<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/microphone"
    tools:context="com.pallaud.loginlab.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="165dp"
        android:layout_marginBottom="165dp"
        android:background="#a1424242"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/login_text"
            android:textColor="#ffffff"
            android:id="@+id/tvLoginText"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textSize="20dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/etEmail"
            android:hint="@string/email_hint"
            android:textColor="#dedbdb"
            android:textColorHint="#d1cece"
            android:layout_below="@+id/tvLoginText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/btnLogin"
            android:layout_alignEnd="@+id/btnLogin"
            android:backgroundTint="#bfbcbc" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/etPassword"
            android:layout_below="@+id/etEmail"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:hint="@string/password_hint"
            android:textColor="#dedbdb"
            android:textColorHint="#d1cece"
            android:layout_alignRight="@+id/btnLogin"
            android:layout_alignEnd="@+id/btnLogin"
            android:backgroundTint="#bfbcbc"
            android:fontFamily="sans-serif"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/btnCancel"
            android:background="#e2e0e0"
            android:textColorHint="#d2d0d0"
            android:textColor="#000000"
            android:layout_below="@+id/etPassword"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:minHeight="40dp"
            android:minWidth="70dp"
            android:textAllCaps="false" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:id="@+id/btnLogin"
            android:background="#67d7eb"
            android:layout_alignTop="@+id/btnCancel"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textColor="#000000"
            android:minWidth="60dp"
            android:minHeight="40dp"
            android:textAllCaps="false"
            android:onClick="takeToWelcome" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/iForgotMyPassword"
            android:id="@+id/tvForgotPassword"
            android:layout_below="@+id/btnCancel"
            android:layout_centerHorizontal="true"
            android:textColor="#67b4ee"
            android:textSize="12dp" />
    </RelativeLayout>
</RelativeLayout>
